--- a/src/lib/OpenEXR/CMakeLists.txt
+++ b/src/lib/OpenEXR/CMakeLists.txt
@@ -1,6 +1,5 @@
 # SPDX-License-Identifier: BSD-3-Clause
 # Copyright (c) Contributors to the OpenEXR Project.
-
 openexr_define_library(OpenEXR
   PRIV_EXPORT OPENEXR_EXPORTS
   CURDIR ${CMAKE_CURRENT_SOURCE_DIR}
@@ -68,6 +67,8 @@ openexr_define_library(OpenEXR
     ImfGenericInputFile.cpp
     ImfGenericOutputFile.cpp
     ImfHeader.cpp
+    ImfHTCompressor.cpp
+    ImfHTKCompressor.cpp
     ImfHuf.cpp
     ImfIDManifest.cpp
     ImfIDManifestAttribute.cpp
@@ -164,6 +165,8 @@ openexr_define_library(OpenEXR
     ImfGenericInputFile.h
     ImfGenericOutputFile.h
     ImfHeader.h
+    ImfHTCompressor.h
+    ImfHTKCompressor.h
     ImfHuf.h
     ImfIDManifest.h
     ImfIDManifestAttribute.h
