--- a/src/test/OpenEXRTest/CMakeLists.txt
+++ b/src/test/OpenEXRTest/CMakeLists.txt
@@ -55,6 +55,7 @@ add_executable(OpenEXRTest
   testFutureProofing.h
   testHeader.cpp
   testHeader.h
+  testHTCompression.cpp
   testHuf.cpp
   testHuf.h
   testIDManifest.cpp
@@ -167,6 +168,7 @@ define_openexr_tests(
  testExistingStreams
  testFutureProofing
  testHeader
+ testHTCompression
  testHuf
  testInputPart
  testIsComplete
