--- a/src/lib/OpenEXRCore/CMakeLists.txt
+++ b/src/lib/OpenEXRCore/CMakeLists.txt
@@ -44,6 +44,7 @@ openexr_define_library(OpenEXRCore
     internal_b44_table.c
     internal_piz.c
     internal_ht.cpp
+    internal_htk.cpp
     internal_dwa.c
     internal_huf.c
 
