--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -190,6 +190,7 @@ cc_library(
         "src/lib/OpenEXRCore/internal_file.h",
         "src/lib/OpenEXRCore/internal_float_vector.h",
         "src/lib/OpenEXRCore/internal_ht.cpp",
+        "src/lib/OpenEXRCore/internal_htk.cpp",
         "src/lib/OpenEXRCore/internal_huf.c",
         "src/lib/OpenEXRCore/internal_huf.h",
         "src/lib/OpenEXRCore/internal_memory.h",
