fix Cmake/compile without KDU, enable exrconv, add docker

--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -20,3 +20,4 @@ add_subdirectory( exrmultipart )
 add_subdirectory( exrcheck )
 add_subdirectory( exrmanifest )
 add_subdirectory( exrperf )
+add_subdirectory( exrconv )
