--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -8,6 +8,7 @@ module(
 
 bazel_dep(name = "bazel_skylib", version = "1.7.1")
 bazel_dep(name = "imath")
+bazel_dep(name = "openjph")
 bazel_dep(name = "libdeflate")
 bazel_dep(name = "platforms", version = "0.0.10")
 
@@ -29,4 +30,10 @@ archive_override(
     ],
     strip_prefix = "libdeflate-master",
     urls = ["https://github.com/ebiggers/libdeflate/archive/refs/heads/master.zip"],
+)
+
+git_override(
+    module_name = "openjph",
+    commit = "7a2f6ea63be48729379659933e0db33edcce87a9",
+    remote = "https://github.com/aous72/OpenJPH.git",
 )
