--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -32,8 +32,12 @@ archive_override(
     urls = ["https://github.com/ebiggers/libdeflate/archive/refs/heads/master.zip"],
 )
 
-git_override(
+archive_override(
     module_name = "openjph",
+    patches = [
+        "//bazel:openjph_add_build_file.patch",
+        "//bazel:openjph_module_dot_bazel.patch",
+    ],
     commit = "7a2f6ea63be48729379659933e0db33edcce87a9",
     remote = "https://github.com/aous72/OpenJPH.git",
 )
