--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -38,6 +38,6 @@ git_override(
         "//bazel:openjph_add_build_file.patch",
         "//bazel:openjph_module_dot_bazel.patch",
     ],
-    commit = "supporting_differing_components",
+    branch = "supporting_differing_components",
     remote = "https://github.com/aous72/OpenJPH.git",
 )
