--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -32,12 +32,12 @@ archive_override(
     urls = ["https://github.com/ebiggers/libdeflate/archive/refs/heads/master.zip"],
 )
 
-git_override(
+archive_override(
     module_name = "openjph",
     patches = [
         "//bazel:openjph_add_build_file.patch",
         "//bazel:openjph_module_dot_bazel.patch",
     ],
-    branch = "supporting_differing_components",
-    remote = "https://github.com/aous72/OpenJPH.git",
+    strip_prefix = "OpenJPH-supporting_differing_components",
+    urls = ["https://github.com/aous72/OpenJPH/archive/refs/heads/supporting_differing_components.zip"],
 )
