--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -313,6 +313,7 @@ cc_library(
         "src/lib/OpenEXR/ImfGenericInputFile.cpp",
         "src/lib/OpenEXR/ImfGenericOutputFile.cpp",
         "src/lib/OpenEXR/ImfHeader.cpp",
+        "src/lib/OpenEXR/ImfHTCompressor.cpp",
         "src/lib/OpenEXR/ImfHuf.cpp",
         "src/lib/OpenEXR/ImfIDManifest.cpp",
         "src/lib/OpenEXR/ImfIDManifestAttribute.cpp",
@@ -418,6 +419,7 @@ cc_library(
         "src/lib/OpenEXR/ImfGenericInputFile.h",
         "src/lib/OpenEXR/ImfGenericOutputFile.h",
         "src/lib/OpenEXR/ImfHeader.h",
+        "src/lib/OpenEXR/ImfHTCompressor.h",
         "src/lib/OpenEXR/ImfHuf.h",
         "src/lib/OpenEXR/ImfIDManifest.h",
         "src/lib/OpenEXR/ImfIDManifestAttribute.h",
